# exchange-rates

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: deployment.yml
adr/: 001-infrastructures-resources.md  002-choose-database.md  003-apigateway-rest-api.md  004-apigateway-cache.md
adr/resources/: 001-diagram.py
docs/: openapi.yaml
serverless/: custom.yml  functions.yml  resources.yml
src/: __init__.py  bootstrap.py  constants.py  errors.py  observability.py
src/handlers/: show_rates.py  store_rates.py
src/helpers/: databases.py  http.py  models.py  xml.py
src/show_rates/: handler.py
tests/: conftest.py
tests/handlers/: test_show_rates.py  test_store_rates.py
tests/helpers/: test_databases.py  test_http.py  test_xml.py
