[tool.poetry]
name = "exchange-rates"
version = "0.1.0"
description = ""
authors = ["Sebastian Wierzchowski <sebastian@wierzchow.ski>"]
readme = "README.md"
packages = [{include = "exchange_rates"}]

[tool.poetry.dependencies]
python = "3.10.*"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
diagrams = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
