[tool.poetry]
name = "exchange-rates"
version = "0.1.0"
description = ""
authors = ["Sebastian Wierzchowski <sebastian@wierzchow.ski>"]
readme = "README.md"
packages = [{include = "exchange_rates"}]

[tool.poetry.dependencies]
python = "3.10.*"
aws-lambda-powertools = "^2.14.1"
boto3 = "^1.26.123"
requests = "^2.29.0"
kink = "^0.6.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
diagrams = "^0.23.3"
pytest = "^7.3.1"
responses = "^0.23.1"
moto = "^4.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
